[package]
name = "gerrychain-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gerrychain_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
rustworkx = { path = "rustworkx" }
petgraph = "0.6.3"
hashbrown = "0.12"
rayon = "1.6"
